# saage

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  engine.example.yaml  pyproject.toml
.github/workflows/: ci.yml
cache/: cache.db
contrib/: README.md
contrib/lewm_hillclimb/: README.md  clean_ckpt.py  cloud_setup.sh  flow.yaml  keep_or_revert.py  setup_experiment.py
contrib/lewm_hillclimb/proposal_critic/: skill.md
contrib/lewm_hillclimb_guided/: clean_ckpt.py  flow.yaml  gain_record.py  keep_or_revert.py  report.py  setup_experiment.py
contrib/lewm_hillclimb_guided/implement/: skill.md
contrib/lewm_hillclimb_guided/proposal_critic/: skill.md
contrib/lewm_hillclimb_guided/propose/: skill.md
contrib/lewm_hillclimb_guided/report/: skill.md
contrib/lewm_hillclimb_guided/report_narrative/: skill.md
contrib/lewm_hillclimb_guided/summarize/: skill.md
cwe/: __init__.py  cli.py  config.py  hydrate.py  llm.py  nodes.py  primitives.py  retry.py  skills.py  tools.py
docs/: greenfield_ml_design.md  kaggle_solver_plan.md  plan.md  remote_handoff_plan.md  windows_support_plan.md
docs/superpowers/plans/: 2026-06-19-checkpoint-resume.md  2026-06-19-nested-loop-resume-docs.md  2026-06-20-remote-checkpoint-resume.md  2026-06-21-kaggle-easy-bundle-port.md  2026-06-21-report-agent.md  2026-06-27-lewm-specialization.md  2026-06-27-nvidia-nim-provider.md
docs/superpowers/specs/: 2026-06-19-checkpoint-resume-design.md  2026-06-19-nested-loop-resume-docs-design.md  2026-06-20-remote-checkpoint-resume-design.md  2026-06-21-kaggle-easy-bundle-port-design.md  2026-06-21-report-agent-design.md  2026-06-23-web-search-tool-design.md  2026-06-24-token-usage-cost-design.md  2026-06-24-user-input-tool-design.md  2026-06-27-lewm-specialization-design.md  2026-06-27-nvidia-nim-provider-design.md
flows/greenfield_ml/: flow.yaml  keep_or_revert.py  read_score.py  report.py  setup_env.py
flows/greenfield_ml/baseline_commit/: skill.md
flows/greenfield_ml/download_data/: skill.md
flows/greenfield_ml/git_init/: skill.md
flows/greenfield_ml/implement/: skill.md
flows/greenfield_ml/proposal_critic/: skill.md
flows/greenfield_ml/propose/: skill.md
flows/greenfield_ml/report/: skill.md
flows/greenfield_ml/report_narrative/: skill.md
flows/greenfield_ml/summarize/: skill.md
flows/greenfield_ml/verify/: skill.md
flows/interactive_demo/: flow.yaml  note.md
flows/interactive_demo/interview/: skill.md
flows/kaggle_solver/: README.md  flow.yaml  grade.py  keep_or_revert.py  prepare_comp.py  prepare_mlebench_data.py  read_val_score.py  setup_competition.py  validate_submission.py
flows/kaggle_solver/build_baseline/: skill.md
flows/kaggle_solver/cache/: cache.db
flows/kaggle_solver/comp_understanding/: skill.md
flows/kaggle_solver/comp_understanding_critic/: skill.md
flows/kaggle_solver/eda/: skill.md
flows/kaggle_solver/eda_critic/: skill.md
flows/kaggle_solver/implement_experiment/: skill.md
flows/kaggle_solver/make_submission/: skill.md
flows/kaggle_solver/proposal_critic/: skill.md
flows/kaggle_solver/propose/: skill.md
flows/kaggle_solver/report/: skill.md
flows/kaggle_solver/report_narrative/: skill.md
flows/kaggle_solver/summarize/: skill.md
flows/kaggle_solver/verify_training/: skill.md
flows/lewm_hillclimb/: README.md  cloud_setup.sh  flow.yaml  setup_experiment.py
flows/lewm_hillclimb_guided/: autoresearch_ideas.md  flow.yaml  setup_experiment.py
flows/poll_job/: flow.yaml
saage/: __init__.py  agent.py  checkpoint.py  cli.py  config.py  hydrate.py  llm.py  nodes.py  paths.py  pricing.py  primitives.py  retry.py  search.py  shell.py  skills.py  spinner.py  tools.py
saage/remote/: __init__.py  cli.py  creds.py  handoff.py  lambda_api.py  observe.py  r2pull.py  r2push.py  resume.py  scripts.py  sshio.py  state.py  target.py  workspace.py
tests/: conftest.py  saage_testkit.py  test_agent.py  test_checkpoint.py  test_clean_ckpt_guided.py  test_cli.py  test_cli_resume.py  test_cli_run_log.py  test_command_action.py  test_command_policy.py  test_flows_hydrate.py  test_gain_record.py  test_kaggle_helpers.py  test_kaggle_keep_or_revert.py  test_kaggle_setup_reset.py  test_keep_or_revert.py  test_lewm_holdout_flow.py  test_lewm_specialization_flow.py  test_prepare_comp.py  test_pricing.py  test_primitives.py  test_providers.py  test_read_score.py  test_retry.py  test_search.py  test_setup_experiment.py  test_shell.py  test_skills.py  test_tagging.py  test_tools.py  test_user_input.py  test_workspace.py
tests/integration/: test_fix_failing_test.py  test_guessing_game.py  test_interactive_demo.py  test_kaggle_solver.py  test_poll_job.py  test_resume.py  test_story_writer.py
tests/remote/: test_creds.py  test_lambda_api.py  test_observe.py  test_r2.py  test_resume_remote.py  test_scripts.py  test_sshio.py  test_workspace.py
(+3 files in other folders)
