[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "saage"
version = "0.1.0"
description = "A tiny deterministic composable agentic workflow engine on PocketFlow"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "pocketflow",
    "pyyaml",
    "jinja2",
    "openai",     # also covers OpenRouter + local OpenAI-compatible servers
    "anthropic",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
saage = "saage.cli:main"

[tool.setuptools.packages.find]
include = ["saage*"]

[tool.pytest.ini_options]
markers = [
    "live: hits a real LLM provider; skipped unless SAAGE_LIVE_PROVIDER is set",
]
testpaths = ["tests"]
